[gd_scene load_steps=2 format=3 uid="uid://ce24o841tqcp5"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_xd6xg"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_xd6xg")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPosition_01" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 50)
gizmo_extents = 50.0

[node name="SpawnPosition_02" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 175)
gizmo_extents = 50.0

[node name="SpawnPosition_03" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 300)
gizmo_extents = 50.0

[node name="SpawnPosition_04" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 425)
gizmo_extents = 50.0

[node name="SpawnPosition_05" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 550)
gizmo_extents = 50.0

[node name="SpawnPosition_06" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 675)
gizmo_extents = 50.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TimerPath" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerPath" to="." method="_on_timer_path_timeout"]
